--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^4.3.0",
     "file-loader": "6.2.0",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.3"
   }
 }
